// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Merge Nothing 1`] = `
[
  "",
  [
    [
      "",
      {},
    ],
    [
      "",
      {},
    ],
  ],
]
`;

exports[`Merge Nothing 2`] = `
[
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
]
`;

exports[`Merge Nothing 3`] = `
[
  "",
  [
    [
      "",
      {},
    ],
    [
      "",
      {},
    ],
  ],
]
`;

exports[`Merge Nothing 4`] = `
[
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
]
`;

exports[`Merge One way delCell 1`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  undefined,
                ],
              },
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                ],
              },
            ],
          },
        ],
        "t2": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "",
      {},
    ],
  ],
]
`;

exports[`Merge One way delCell 2`] = `
[
  419545430,
  419545430,
  2038672141,
  284112242,
  3207404266,
  1517672885,
  0,
  0,
]
`;

exports[`Merge One way delRow 1`] = `
[
  "Hc2DO@000038DKS9",
  [
    [
      "Hc2DO@000038DKS9",
      {
        "t1": [
          "Hc2DO@000038DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  undefined,
                ],
              },
            ],
            "r2": [
              "Hc2DO@000038DKS9",
              {
                "c1": [
                  "Hc2DO@000038DKS9",
                  undefined,
                ],
              },
            ],
          },
        ],
        "t2": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "",
      {},
    ],
  ],
]
`;

exports[`Merge One way delRow 2`] = `
[
  1131541991,
  1131541991,
  3435653238,
  284112242,
  3207404266,
  1517672885,
  0,
  0,
]
`;

exports[`Merge One way delTable 1`] = `
[
  "Hc2DO@000048DKS9",
  [
    [
      "Hc2DO@000048DKS9",
      {
        "t1": [
          "Hc2DO@000038DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  undefined,
                ],
              },
            ],
            "r2": [
              "Hc2DO@000038DKS9",
              {
                "c1": [
                  "Hc2DO@000038DKS9",
                  undefined,
                ],
              },
            ],
          },
        ],
        "t2": [
          "Hc2DO@000048DKS9",
          {
            "r1": [
              "Hc2DO@000048DKS9",
              {
                "c1": [
                  "Hc2DO@000048DKS9",
                  undefined,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "",
      {},
    ],
  ],
]
`;

exports[`Merge One way delTable 2`] = `
[
  3830531581,
  3830531581,
  3435653238,
  284112242,
  3207404266,
  1517672885,
  0,
  0,
]
`;

exports[`Merge One way delTables 1`] = `
[
  "Hc2DO@000068DKS9",
  [
    [
      "Hc2DO@000068DKS9",
      {
        "t1": [
          "Hc2DO@000068DKS9",
          {
            "r1": [
              "Hc2DO@000068DKS9",
              {
                "c1": [
                  "Hc2DO@000068DKS9",
                  undefined,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  undefined,
                ],
              },
            ],
            "r2": [
              "Hc2DO@000038DKS9",
              {
                "c1": [
                  "Hc2DO@000038DKS9",
                  undefined,
                ],
              },
            ],
          },
        ],
        "t2": [
          "Hc2DO@000068DKS9",
          {
            "r1": [
              "Hc2DO@000048DKS9",
              {
                "c1": [
                  "Hc2DO@000048DKS9",
                  undefined,
                ],
              },
            ],
            "r2": [
              "Hc2DO@000068DKS9",
              {
                "c2": [
                  "Hc2DO@000068DKS9",
                  undefined,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "",
      {},
    ],
  ],
]
`;

exports[`Merge One way delTables 2`] = `
[
  1487413994,
  1487413994,
  1958915000,
  1802329738,
  1646436633,
  1517672885,
  0,
  0,
]
`;

exports[`Merge One way delValue 1`] = `
[
  "Hc2DO@000098DKS9",
  [
    [
      "Hc2DO@000068DKS9",
      {
        "t1": [
          "Hc2DO@000068DKS9",
          {
            "r1": [
              "Hc2DO@000068DKS9",
              {
                "c1": [
                  "Hc2DO@000068DKS9",
                  undefined,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  undefined,
                ],
              },
            ],
            "r2": [
              "Hc2DO@000038DKS9",
              {
                "c1": [
                  "Hc2DO@000038DKS9",
                  undefined,
                ],
              },
            ],
          },
        ],
        "t2": [
          "Hc2DO@000068DKS9",
          {
            "r1": [
              "Hc2DO@000048DKS9",
              {
                "c1": [
                  "Hc2DO@000048DKS9",
                  undefined,
                ],
              },
            ],
            "r2": [
              "Hc2DO@000068DKS9",
              {
                "c2": [
                  "Hc2DO@000068DKS9",
                  undefined,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "Hc2DO@000098DKS9",
      {
        "v1": [
          "Hc2DO@000088DKS9",
          1,
        ],
        "v2": [
          "Hc2DO@000098DKS9",
          undefined,
        ],
      },
    ],
  ],
]
`;

exports[`Merge One way delValue 2`] = `
[
  707374129,
  1487413994,
  1958915000,
  1802329738,
  1646436633,
  1517672885,
  1921093339,
  1209068807,
]
`;

exports[`Merge One way delValues 1`] = `
[
  "Hc2DO@0000:8DKS9",
  [
    [
      "Hc2DO@000068DKS9",
      {
        "t1": [
          "Hc2DO@000068DKS9",
          {
            "r1": [
              "Hc2DO@000068DKS9",
              {
                "c1": [
                  "Hc2DO@000068DKS9",
                  undefined,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  undefined,
                ],
              },
            ],
            "r2": [
              "Hc2DO@000038DKS9",
              {
                "c1": [
                  "Hc2DO@000038DKS9",
                  undefined,
                ],
              },
            ],
          },
        ],
        "t2": [
          "Hc2DO@000068DKS9",
          {
            "r1": [
              "Hc2DO@000048DKS9",
              {
                "c1": [
                  "Hc2DO@000048DKS9",
                  undefined,
                ],
              },
            ],
            "r2": [
              "Hc2DO@000068DKS9",
              {
                "c2": [
                  "Hc2DO@000068DKS9",
                  undefined,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "Hc2DO@0000:8DKS9",
      {
        "v1": [
          "Hc2DO@0000:8DKS9",
          undefined,
        ],
        "v2": [
          "Hc2DO@000098DKS9",
          undefined,
        ],
      },
    ],
  ],
]
`;

exports[`Merge One way delValues 2`] = `
[
  1705173194,
  1487413994,
  1958915000,
  1802329738,
  1646436633,
  1517672885,
  1024115232,
  4067122285,
]
`;

exports[`Merge One way setCell 1`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000018DKS9",
      {
        "t1": [
          "Hc2DO@000018DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  0,
                ],
              },
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                ],
              },
            ],
          },
        ],
        "t2": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "",
      {},
    ],
  ],
]
`;

exports[`Merge One way setCell 2`] = `
[
  957968817,
  957968817,
  2815901277,
  1148302086,
  3207404266,
  2614692414,
  0,
  0,
]
`;

exports[`Merge One way setCell 2 1`] = `
[
  "Hc2DO@000058DKS9",
  [
    [
      "Hc2DO@000058DKS9",
      {
        "t1": [
          "Hc2DO@000038DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  undefined,
                ],
              },
            ],
            "r2": [
              "Hc2DO@000038DKS9",
              {
                "c1": [
                  "Hc2DO@000038DKS9",
                  undefined,
                ],
              },
            ],
          },
        ],
        "t2": [
          "Hc2DO@000058DKS9",
          {
            "r1": [
              "Hc2DO@000048DKS9",
              {
                "c1": [
                  "Hc2DO@000048DKS9",
                  undefined,
                ],
              },
            ],
            "r2": [
              "Hc2DO@000058DKS9",
              {
                "c2": [
                  "Hc2DO@000058DKS9",
                  2,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "",
      {},
    ],
  ],
]
`;

exports[`Merge One way setCell 2 2`] = `
[
  1483802621,
  1483802621,
  3435653238,
  284112242,
  3207404266,
  1517672885,
  0,
  0,
]
`;

exports[`Merge One way setTables 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  0,
                ],
              },
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                ],
              },
            ],
          },
        ],
        "t2": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "",
      {},
    ],
  ],
]
`;

exports[`Merge One way setTables 2`] = `
[
  3987637125,
  3987637125,
  374710841,
  2272266658,
  2614692414,
  2614692414,
  0,
  0,
]
`;

exports[`Merge One way setValue 1`] = `
[
  "Hc2DO@000088DKS9",
  [
    [
      "Hc2DO@000068DKS9",
      {
        "t1": [
          "Hc2DO@000068DKS9",
          {
            "r1": [
              "Hc2DO@000068DKS9",
              {
                "c1": [
                  "Hc2DO@000068DKS9",
                  undefined,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  undefined,
                ],
              },
            ],
            "r2": [
              "Hc2DO@000038DKS9",
              {
                "c1": [
                  "Hc2DO@000038DKS9",
                  undefined,
                ],
              },
            ],
          },
        ],
        "t2": [
          "Hc2DO@000068DKS9",
          {
            "r1": [
              "Hc2DO@000048DKS9",
              {
                "c1": [
                  "Hc2DO@000048DKS9",
                  undefined,
                ],
              },
            ],
            "r2": [
              "Hc2DO@000068DKS9",
              {
                "c2": [
                  "Hc2DO@000068DKS9",
                  undefined,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "Hc2DO@000088DKS9",
      {
        "v1": [
          "Hc2DO@000088DKS9",
          1,
        ],
        "v2": [
          "Hc2DO@000078DKS9",
          0,
        ],
      },
    ],
  ],
]
`;

exports[`Merge One way setValue 2`] = `
[
  720888881,
  1487413994,
  1958915000,
  1802329738,
  1646436633,
  1517672885,
  1918879451,
  1209068807,
]
`;

exports[`Merge One way setValues 1`] = `
[
  "Hc2DO@000078DKS9",
  [
    [
      "Hc2DO@000068DKS9",
      {
        "t1": [
          "Hc2DO@000068DKS9",
          {
            "r1": [
              "Hc2DO@000068DKS9",
              {
                "c1": [
                  "Hc2DO@000068DKS9",
                  undefined,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  undefined,
                ],
              },
            ],
            "r2": [
              "Hc2DO@000038DKS9",
              {
                "c1": [
                  "Hc2DO@000038DKS9",
                  undefined,
                ],
              },
            ],
          },
        ],
        "t2": [
          "Hc2DO@000068DKS9",
          {
            "r1": [
              "Hc2DO@000048DKS9",
              {
                "c1": [
                  "Hc2DO@000048DKS9",
                  undefined,
                ],
              },
            ],
            "r2": [
              "Hc2DO@000068DKS9",
              {
                "c2": [
                  "Hc2DO@000068DKS9",
                  undefined,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "Hc2DO@000078DKS9",
      {
        "v1": [
          "Hc2DO@000078DKS9",
          0,
        ],
        "v2": [
          "Hc2DO@000078DKS9",
          0,
        ],
      },
    ],
  ],
]
`;

exports[`Merge One way setValues 2`] = `
[
  3978421055,
  1487413994,
  1958915000,
  1802329738,
  1646436633,
  1517672885,
  3045704149,
  1524959021,
]
`;

exports[`Merge Two way Causality 1`] = `
[
  "Hc2DO@000035DK@@",
  [
    [
      "Hc2DO@000025DK@@",
      {
        "t1": [
          "Hc2DO@000025DK@@",
          {
            "r1": [
              "Hc2DO@000025DK@@",
              {
                "c1": [
                  "Hc2DO@000025DK@@",
                  2,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "Hc2DO@000035DK@@",
      {
        "v1": [
          "Hc2DO@000035DK@@",
          2,
        ],
      },
    ],
  ],
]
`;

exports[`Merge Two way Causality 2`] = `
[
  "Hc2DO@000058DKS9",
  [
    [
      "Hc2DO@000048DKS9",
      {
        "t1": [
          "Hc2DO@000048DKS9",
          {
            "r1": [
              "Hc2DO@000048DKS9",
              {
                "c1": [
                  "Hc2DO@000048DKS9",
                  3,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "Hc2DO@000058DKS9",
      {
        "v1": [
          "Hc2DO@000058DKS9",
          3,
        ],
      },
    ],
  ],
]
`;

exports[`Merge Two way Conflict 1`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "Hc2DO@000018DKS9",
      {
        "v0": [
          "Hc2DO@000018DKS9",
          0,
        ],
        "v1": [
          "Hc2DO@000018DKS9",
          1,
        ],
      },
    ],
  ],
]
`;

exports[`Merge Two way Conflict 2`] = `
[
  1335458839,
  4033596827,
  1293085726,
  1279994494,
  4065945599,
  0,
  3220353420,
  3207404266,
]
`;

exports[`Merge Two way Conflict 3`] = `
[
  "Hc2DO@100015DK@@",
  [
    [
      "Hc2DO@100005DK@@",
      {
        "t1": [
          "Hc2DO@100005DK@@",
          {
            "r1": [
              "Hc2DO@100005DK@@",
              {
                "c1": [
                  "Hc2DO@100005DK@@",
                  2,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "Hc2DO@100015DK@@",
      {
        "v1": [
          "Hc2DO@100015DK@@",
          2,
        ],
      },
    ],
  ],
]
`;

exports[`Merge Two way Conflict 4`] = `
[
  4215415104,
  2754557355,
  3649130009,
  4004729339,
  2804922642,
  0,
  1600984299,
  2724740231,
]
`;

exports[`Merge Two way Conflict 5`] = `
[
  "Hc2DO@100015DK@@",
  [
    [
      "Hc2DO@100005DK@@",
      {
        "t1": [
          "Hc2DO@100005DK@@",
          {
            "r1": [
              "Hc2DO@100005DK@@",
              {
                "c1": [
                  "Hc2DO@100005DK@@",
                  2,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "Hc2DO@100015DK@@",
      {
        "v0": [
          "Hc2DO@000018DKS9",
          0,
        ],
        "v1": [
          "Hc2DO@100015DK@@",
          2,
        ],
      },
    ],
  ],
]
`;

exports[`Merge Two way Conflict 6`] = `
[
  3422332079,
  2754557355,
  3649130009,
  4004729339,
  2804922642,
  0,
  1876136196,
  2724740231,
]
`;

exports[`Merge Two way Interleaving 1`] = `
[
  "Hc2DO@200008DKS9",
  [
    [
      "Hc2DO@200008DKS9",
      {
        "t1": [
          "Hc2DO@200008DKS9",
          {
            "r1": [
              "Hc2DO@200008DKS9",
              {
                "c1": [
                  "Hc2DO@200008DKS9",
                  undefined,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "",
      {},
    ],
  ],
]
`;

exports[`Merge Two way Interleaving 2`] = `
[
  "Hc2DO@100005DK@@",
  [
    [
      "Hc2DO@100005DK@@",
      {
        "t1": [
          "Hc2DO@100005DK@@",
          {
            "r1": [
              "Hc2DO@100005DK@@",
              {
                "c2": [
                  "Hc2DO@100005DK@@",
                  2,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "",
      {},
    ],
  ],
]
`;

exports[`Merge Two way Mutually exclusive tables & values 1`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "Hc2DO@000018DKS9",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
        ],
      },
    ],
  ],
]
`;

exports[`Merge Two way Mutually exclusive tables & values 2`] = `
[
  2133326328,
  4033596827,
  1293085726,
  1279994494,
  4065945599,
  0,
  2404136035,
  3207404266,
]
`;

exports[`Merge Two way Mutually exclusive tables & values 3`] = `
[
  "Hc2DO@100015DK@@",
  [
    [
      "Hc2DO@100005DK@@",
      {
        "t1": [
          "Hc2DO@100005DK@@",
          {
            "r1": [
              "Hc2DO@100005DK@@",
              {
                "c2": [
                  "Hc2DO@100005DK@@",
                  2,
                ],
              },
            ],
            "r2": [
              "Hc2DO@100005DK@@",
              {
                "c2": [
                  "Hc2DO@100005DK@@",
                  2,
                ],
              },
            ],
          },
        ],
        "t2": [
          "Hc2DO@100005DK@@",
          {
            "r2": [
              "Hc2DO@100005DK@@",
              {
                "c2": [
                  "Hc2DO@100005DK@@",
                  2,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "Hc2DO@100015DK@@",
      {
        "v2": [
          "Hc2DO@100015DK@@",
          2,
        ],
      },
    ],
  ],
]
`;

exports[`Merge Two way Mutually exclusive tables & values 4`] = `
[
  1434493245,
  2890591112,
  2400251703,
  140652553,
  0,
  2804922642,
  4190784181,
  0,
]
`;

exports[`Merge Two way Mutually exclusive tables & values 5`] = `
[
  "Hc2DO@100015DK@@",
  [
    [
      "Hc2DO@100005DK@@",
      {
        "t1": [
          "Hc2DO@100005DK@@",
          {
            "r1": [
              "Hc2DO@100005DK@@",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                ],
                "c2": [
                  "Hc2DO@100005DK@@",
                  2,
                ],
              },
            ],
            "r2": [
              "Hc2DO@100005DK@@",
              {
                "c2": [
                  "Hc2DO@100005DK@@",
                  2,
                ],
              },
            ],
          },
        ],
        "t2": [
          "Hc2DO@100005DK@@",
          {
            "r2": [
              "Hc2DO@100005DK@@",
              {
                "c2": [
                  "Hc2DO@100005DK@@",
                  2,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "Hc2DO@100015DK@@",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
        ],
        "v2": [
          "Hc2DO@100015DK@@",
          2,
        ],
      },
    ],
  ],
]
`;

exports[`Merge Two way Mutually exclusive tables & values 6`] = `
[
  3654997970,
  981583737,
  385702800,
  3406116407,
  4065945599,
  2804922642,
  3814396075,
  3207404266,
]
`;

exports[`Merge Two way Mutually exclusive tables vs values 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "",
      {},
    ],
  ],
]
`;

exports[`Merge Two way Mutually exclusive tables vs values 2`] = `
[
  3306754367,
  3306754367,
  3488783888,
  2311787809,
  2614692414,
  0,
  0,
  0,
]
`;

exports[`Merge Two way Mutually exclusive tables vs values 3`] = `
[
  "Hc2DO@100005DK@@",
  [
    [
      "",
      {},
    ],
    [
      "Hc2DO@100005DK@@",
      {
        "v1": [
          "Hc2DO@100005DK@@",
          0,
        ],
      },
    ],
  ],
]
`;

exports[`Merge Two way Mutually exclusive tables vs values 4`] = `
[
  188771937,
  0,
  0,
  0,
  0,
  0,
  188771937,
  3183766124,
]
`;

exports[`Merge Two way Mutually exclusive tables vs values 5`] = `
[
  "Hc2DO@100005DK@@",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "Hc2DO@100005DK@@",
      {
        "v1": [
          "Hc2DO@100005DK@@",
          0,
        ],
      },
    ],
  ],
]
`;

exports[`Merge Two way Mutually exclusive tables vs values 6`] = `
[
  3461971806,
  3306754367,
  3488783888,
  2311787809,
  2614692414,
  0,
  188771937,
  3183766124,
]
`;

exports[`apply/setMergeableContent apply into empty store 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
        ],
      },
    ],
  ],
]
`;

exports[`apply/setMergeableContent apply over existing content 1`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000018DKS9",
      {
        "t1": [
          "Hc2DO@000018DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c0": [
                  "Hc2DO@000008DKS9",
                  0,
                ],
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "Hc2DO@000018DKS9",
      {
        "v0": [
          "Hc2DO@000008DKS9",
          0,
        ],
        "v1": [
          "Hc2DO@000018DKS9",
          1,
        ],
      },
    ],
  ],
]
`;

exports[`apply/setMergeableContent set into empty store 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
        ],
      },
    ],
  ],
]
`;

exports[`apply/setMergeableContent set over existing content 1`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000018DKS9",
      {
        "t1": [
          "Hc2DO@000018DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "Hc2DO@000018DKS9",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
        ],
      },
    ],
  ],
]
`;

exports[`apply/setMergeableContent set over existing content 2`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  2,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "Hc2DO@000018DKS9",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
        ],
      },
    ],
  ],
]
`;

exports[`getMergeableContent Empty transaction 1`] = `
[
  "",
  [
    [
      "",
      {},
    ],
    [
      "",
      {},
    ],
  ],
]
`;

exports[`getMergeableContent Empty transaction 2`] = `
[
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
]
`;

exports[`getMergeableContent Initialize 1`] = `
[
  "",
  [
    [
      "",
      {},
    ],
    [
      "",
      {},
    ],
  ],
]
`;

exports[`getMergeableContent Mutate 1`] = `
[
  "Hc2DO@000068DKS9",
  [
    [
      "Hc2DO@000048DKS9",
      {
        "t1": [
          "Hc2DO@000038DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                ],
                "c2": [
                  "Hc2DO@000028DKS9",
                  undefined,
                ],
              },
            ],
            "r2": [
              "Hc2DO@000038DKS9",
              {
                "c1": [
                  "Hc2DO@000038DKS9",
                  undefined,
                ],
              },
            ],
          },
        ],
        "t2": [
          "Hc2DO@000048DKS9",
          {
            "r1": [
              "Hc2DO@000048DKS9",
              {
                "c1": [
                  "Hc2DO@000048DKS9",
                  undefined,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "Hc2DO@000068DKS9",
      {
        "v1": [
          "Hc2DO@000058DKS9",
          5,
        ],
        "v2": [
          "Hc2DO@000068DKS9",
          undefined,
        ],
      },
    ],
  ],
]
`;

exports[`getMergeableContent Mutate 2`] = `
[
  839565294,
  3830531581,
  3435653238,
  284112242,
  3207404266,
  1517672885,
  3596352019,
  3265694938,
]
`;

exports[`getMergeableContent Set in sequence 1`] = `
[
  "Hc2DO@000058DKS9",
  [
    [
      "Hc2DO@000038DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                ],
                "c2": [
                  "Hc2DO@000018DKS9",
                  1,
                ],
              },
            ],
            "r2": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                ],
              },
            ],
          },
        ],
        "t2": [
          "Hc2DO@000038DKS9",
          {
            "r1": [
              "Hc2DO@000038DKS9",
              {
                "c1": [
                  "Hc2DO@000038DKS9",
                  3,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "Hc2DO@000058DKS9",
      {
        "v1": [
          "Hc2DO@000048DKS9",
          4,
        ],
        "v2": [
          "Hc2DO@000058DKS9",
          5,
        ],
      },
    ],
  ],
]
`;

exports[`getMergeableContent Set in sequence 2`] = `
[
  171405368,
  3257932459,
  3331060598,
  4220223298,
  2614692414,
  3207404266,
  3355929235,
  4189032886,
]
`;

exports[`getMergeableContent Set together 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  0,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  1,
                ],
              },
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  2,
                ],
              },
            ],
          },
        ],
        "t2": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  3,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          4,
        ],
        "v2": [
          "Hc2DO@000008DKS9",
          5,
        ],
      },
    ],
  ],
]
`;

exports[`getMergeableContent Set together 2`] = `
[
  32757013,
  2620828010,
  1539544661,
  1474233545,
  2614692414,
  4065945599,
  2646965375,
  4060269138,
]
`;

exports[`getTransactionMergeableChanges After two transactions 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t0": [
          "Hc2DO@000008DKS9",
          {
            "r0": [
              "Hc2DO@000008DKS9",
              {
                "c0": [
                  "Hc2DO@000008DKS9",
                  0,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "",
      {},
    ],
  ],
]
`;

exports[`getTransactionMergeableChanges After two transactions 2`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000018DKS9",
      {
        "t0": [
          "Hc2DO@000008DKS9",
          {
            "r0": [
              "Hc2DO@000008DKS9",
              {
                "c0": [
                  "Hc2DO@000008DKS9",
                  0,
                ],
              },
            ],
          },
        ],
        "t1": [
          "Hc2DO@000018DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  1,
                ],
              },
            ],
          },
        ],
      },
    ],
    [
      "",
      {},
    ],
  ],
]
`;
